[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
sea-orm = { version = "0.11.3", features = ["sqlx-all", "runtime-actix-native-tls"] }
#sea-orm = { version = "0.12.2", features = ["sqlx-all", "runtime-actix-native-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
